--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hexcolor: ^3.0.1
   shared_preferences: ^2.2.0
   webview_flutter: ^4.2.2
+  flutter_phoenix: "^1.0.0"
   flutter:
     sdk: flutter
 
